# blankvm

./: CMakeLists.txt  LICENSE.txt  README.md
src/: blankvm.c
test/: in.txt  out.txt  test16.asm  test32.asm  test64.asm
